assets/css/style.scss
/* ... */
/* Footer
-------------------------------------------------- */
.page-footer {
  padding: var(--gap);
  background: var(--tertiary);
  .content {
    max-width: calc(var(--nav-width) + var(--gap) * 2);
    margin-left: auto;
    margin-right: auto
  }
  p {
    font-size: 16px;
  }
  span {
    margin-left: 1px;
    margin-right: 1px;
  }
}
.row {
  padding: .75rem;
}
.column {
  padding: 0 var(--gap);
}
.column.left {
  width: 30%;
}
.column.right {
  width: 35%;
}
/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 850px) {
  .column {
    width: 100% !important;
    margin-bottom: var(--gap);
    padding: 0px;
  }
  .page-footer h3 {
    margin-bottom: calc(var(--gap) / 3);
  }
}
@media screen and (min-width: 850px) {
  .row {
    display: flex;
    flex-basis: 0;
    flex-grow: 1;
    flex-shrink: 1;
  }
  .page-footer h3 {
    margin-bottom: var(--gap);
  }
}

/* Others
-------------------------------------------------- */
.x-overflow-container {
  overflow-x: auto;
}

